<resources>
    <string name="app_name">SelfDoc</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="nav_user">Welcome, AJ</string>
    <string name="nav_location">Dindugul</string>
    <string name="action_logout">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="symptom">Symptom</string>
    <string name="select_symptoms">select symptoms</string>
    <string name="predict">Predict</string>
    <string name="symptoms">symptoms</string>
    <string name="phone_number">Phone number</string>
    <string name="button">Button</string>
    <string name="phone_number_verification">Phone Number Verification</string>
    <string name="create_account">Create Account</string>
    <string name="logged_in_successfully">Logged In Successfully</string>
    <string name="logout">Logout</string>
    <string name="send_code">Send Code</string>
    <string name="verify_your_phone_number">Verify your Phone number</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="email_id">email id</string>
    <string name="verification">Verification</string>
    <string name="forget_password">forget password</string>
    <string name="create_an_account">create an account</string>
    <string name="reset_password">Reset Password</string>
    <string name="Reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="change">Change</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure_want_to_delete_your_account">Are you sure want to delete your account?</string>
    <string name="new_email">New email</string>
    <string name="update">Update</string>
    <string name="login1">Login</string>

    <string name="enter_symptoms">enter symptoms</string>
    <string name="nulla">nulla</string>
    <string name="disease">Disease</string>
    <string name="click_here_to_get_suggestions">Click here to get Suggestions</string>
    <string name="symptomss">symptoms</string>


</resources>
