<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Disease_prediction">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/SymptomsLabel"
            android:layout_width="147dp"
            android:layout_height="45dp"
            android:layout_marginStart="132dp"
            android:layout_marginLeft="132dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="132dp"
            android:layout_marginRight="132dp"
            android:clickable="true"
            android:text="@string/symptomss"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/color_text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/autocompleteEditText"
            android:layout_width="228dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="8dp"
            android:completionHint="select symptoms"
            android:hint="@string/select_symptoms"
            app:layout_constraintBottom_toTopOf="@+id/selectedSymp"
            app:layout_constraintEnd_toStartOf="@+id/plusBtnImg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SymptomsLabel"
            app:layout_constraintVertical_bias="0.027" />

        <ListView
            android:id="@+id/selectedSymp"
            android:layout_width="395dp"
            android:layout_height="361dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="56dp"
            app:layout_constraintBottom_toTopOf="@+id/predictBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/predictBtn"
            style="@android:style/Widget.Holo.Button.Inset"
            android:layout_width="92dp"
            android:layout_height="42dp"
            android:layout_marginStart="165dp"
            android:layout_marginLeft="165dp"
            android:layout_marginEnd="165dp"
            android:layout_marginRight="165dp"
            android:layout_marginBottom="44dp"
            android:text="@string/predict"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/plusBtnImg"
            android:layout_width="39dp"
            android:layout_height="38dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/plus"
            app:layout_constraintBottom_toTopOf="@+id/selectedSymp"
            app:layout_constraintEnd_toStartOf="@+id/resetBtn"
            app:layout_constraintStart_toEndOf="@+id/autocompleteEditText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.166" />

        <ImageView
            android:id="@+id/resetBtn"
            android:layout_width="39dp"
            android:layout_height="38dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:src="@drawable/reset"
            app:layout_constraintBottom_toTopOf="@+id/selectedSymp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/plusBtnImg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.166" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="252dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>